src/tests/snapshots/niri__tests__window_opening__check_fullscreen_maximize@fsF-tmF.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized to edges: false"
expression: snapshot
---
initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
